@@ -1,5 +1,10 @@
 1998-06-22  Matti Aarnio  <mea@mea.tmt.tele.fi>
 
+	* include/splay.h, lib/pjwhash32.c, lib/symbol.c:
+	    Created symbol-routines which handle arbitary
+	    binary key values; key hashes are a bit simple-
+	    minded, though...
+	
 	* scheduler/scheduler.c, man/scheduler.8:
 	    Runtime option '-n' -- see the man-page.
 	
